--- a/style/mobile.css
+++ b/style/mobile.css
@@ -7,18 +7,23 @@
 
     h1{
         font-weight: 800;
-        font-size: 28px;
-        line-height: 35px;
+        font-size: 35px;
+        line-height: 40px;
     }
-    h2,
-    .course-name-desc h2{
+    h2{
         font-weight: bold;
         font-size: 24px;
-        line-height: 30px;
+        line-height:28px;
+    }
+    .course-name-desc h2{
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 23px;
+        text-transform: none;
     }
     h3{
         font-weight: bold;
-        font-size: 18px;
+        font-size: 20px;
         line-height: 24px;
     }
     h4{
@@ -153,6 +158,14 @@
     nav ul>li:hover .menu-children{
         padding: 20px 15px 0;
     }
+    .home-sign-item-text a, .home-sign-item-text a:visited {
+        padding: 15px 25px;
+        width: auto;
+    }
+    .course-name.tkt-exam h1{
+        font-size: 30px;
+        line-height: 34px;
+    }
     nav ul>li .menu-children li a, nav ul>li .menu-children li a:visited {
         font-style: normal;
         font-weight: normal;
@@ -196,7 +209,7 @@
         margin-bottom: 15px;
     }
     .course-name{
-        padding: 15px 5% 80px;
+        padding: 15px 5% 45px;
     }
     .course-name_wrap{
         
@@ -210,9 +223,11 @@
         grid-area: content;
     }
     .course-name-desc h2{
-        margin-bottom: 25px;
+        margin-bottom: 10px;
     }
-   
+    .fast-menu_wrap>div{
+        min-height: 95px;
+    }
     .course-name-img{
         width: 100%;
         grid-area: image;
@@ -241,6 +256,7 @@
 
     .course-name-desc p a, .course-name-desc p a:visited{
         margin-bottom: 15px;
+        width: 100%;
     }
     .course-name-list{
         padding: 40px 0 0;
@@ -253,6 +269,10 @@
     }
     .course-name-list_item{
         padding: 20px 15px 20px;
+        margin-bottom: 20px;
+    }
+    .course-name-desc p{
+        font-size: 14px;
         margin-bottom: 20px;
     }
 
@@ -422,7 +442,7 @@
 }
 /* Course Skills */
 .course-skills{
-    padding: 50px 5%;
+    padding: 50px 5% 5px;
     background: #F5F5F5;
 }
 .course-skills_wrap{
@@ -799,12 +819,12 @@
     display: block;
     text-align: center;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 30px;
-    text-transform: uppercase;
+    text-transform: none;
     color: #A0A0A0;
     text-decoration: none;
-    padding: 15px 0;
+    padding: 10px 0;
     border: 3px solid #F5F5F5;
     cursor: pointer;
 }
@@ -837,6 +857,7 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    padding: 0 5%;
 }
 
 /* Footer */
@@ -869,6 +890,7 @@ footer .footer_wrap>div{
 
 .course-programm{
     display: block;
+    padding-top: 50px !important;
 }
 .course-programm_wrap{
     display: block;
@@ -884,7 +906,7 @@ footer .footer_wrap>div{
 
 .course-group-desc{
     display: block;
-    padding: 50px 5% 15px;
+    padding: 50px 5% 25px;
 }
 .course-group-desc_wrap{
     display: block;
@@ -903,13 +925,26 @@ footer .footer_wrap>div{
 .group-filial .course-work-item{
     width: 100%;
 }
+.faq-subscribe {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
 
-.course-reviews-item{display: block; padding-bottom: 15px; position: relative;}
+.course-reviews-item{display: block; padding: 0; padding-bottom: 15px; position: relative;}
 .course-reviews-item img{margin-bottom: 20px;}
 .group-filial.course-build h2 {
     margin-bottom: 120px;
 }
-
+.course-rewviews-slider .slick-list {
+    overflow: hidden !important;
+}
+.course-reviews-name span {
+    font-size: 14px;
+    line-height: 16px;
+    margin-top: 5px;
+    display: block;
+}
 .course-test.group-filial{
     padding-bottom: 160px;
 }
@@ -917,6 +952,24 @@ footer .footer_wrap>div{
     position: absolute;
     width: 100%;
     transform: translateY(-20%);
+}
+.course-reviews {
+    padding: 50px 5%;
+    background-color: #f5f5f5;
+}
+
+.feedback.group-filial{
+    padding-bottom: 200px;
+    overflow: hidden;
+}
+
+.group-filial .feedback_wrap::after {
+    width: 231px !important;
+    height: 270px !important;
+    background-image: url(./../img/feedback-illustr_group.svg);
+    bottom: -280px !important;
+    left: 10%;
+    position: absolute !important;
 }
 
 .tkt-exam .course-name-img{
@@ -929,12 +982,13 @@ footer .footer_wrap>div{
 
 .course-sert-desc h2{
     width: 100%;
+    margin-bottom: 45px;
 }
 .course-sert-desc-text{
     display: block;
 }
 .tab-item-about_attantion{
-    padding: 60px 0px 0px 0px;
+    padding: 80px 0px 0px 0px;
     background: transparent !important;
 }
 .tab-item-about_attantion:before {
@@ -944,7 +998,44 @@ footer .footer_wrap>div{
 }
 .course-sert-desc{
     position: relative;
+    padding: 50px 5%;
     padding-bottom: 300px;
+    
+}
+.course-exam-them {
+    padding: 50px 5%;
+}
+.course-suit.tkt-exam {
+    padding: 50px 5% 0px;
+    margin-bottom: 50px;
+}
+.group-filial .course-work_wrap h2 {
+    margin-bottom: 50px !important;
+}
+.group-filial .course-work-post {
+    margin-bottom: 25px !important;
+}
+.group-filial.course-work {
+    padding: 0 5% 0px !important;
+}
+.tkt-exam .course-rates-item h3:last-of-type {
+
+    font-size: 13px !important;
+    line-height: 22px;
+}
+.course-faq {
+    padding: 50px 5% 0;
+}
+.course-suit h2 {
+    margin-bottom: 20px;
+}
+.course-sert-desc-text ul li{
+    font-size: 16px;
+    line-height: 20px;
+}
+.course-sert-desc-text ul li::before {
+    top: 0;
+    transform: translateY(0%);
 }
 .course-sert-desc-text img {
     width: 200px;
@@ -987,10 +1078,10 @@ footer .footer_wrap>div{
 }
 .course-reviews-name {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 16px;
     position: absolute;
     top: 10px;
-    left: 150px;
+    left: 120px;
 }
 @keyframes swipe {
     from {right: 15%;}
@@ -1010,8 +1101,14 @@ footer .footer_wrap>div{
     }
     .fast-menu_wrap>div a, .fast-menu_wrap>div a:visited {
         padding: 25px 45px 25px 40%;
-        font-size: 18px;
+        font-size: 16px;
         line-height: 22px;
+        height: 100%;
+        min-height: 95px;
+    }
+    .home-teacher {
+        padding: 50px 5%;
+        text-align: center;
     }
     .fast-menu {
         padding: 0px 5% 30px;
@@ -1059,18 +1156,24 @@ footer .footer_wrap>div{
     }
     .home-news,
     .home-stocks,
-    .home-feedback,
+    .home-feedback{
+        padding: 50px 5%;
+    }
     .teachers-page,
     .feedback-page,
     .news-page,
     .stocks-page{
-        padding: 20px 5%;
+        padding: 0px 5% 50px;
     }
     .home-teacher-item img, .teacher-item img {
-        margin: 0 auto 10px;
+        margin: 0 auto 23px;
     }
     .home-teacher-item h4, .teacher-item h4 {
         margin-bottom: 5px;
+    }
+    .subscribe-vk {
+        padding: 50px 5%;
+        background: #F5A300;
     }
 
     .home-stocks-item a{
@@ -1083,11 +1186,23 @@ footer .footer_wrap>div{
     }
     .subscribe-vk_wrap>div:first-child{
         max-width: 100%;
-        margin-bottom: 25px;
+        margin-bottom: 32px;
+    }
+    .home-stock-content{
+        padding: 30px 40px;
+    }
+    .home-feedback-text span, .feedback-page-name span{
+        line-height: 16px;
+    }
+    .home-feedback-text h4 {
+        
+        line-height: 18px;
+        margin-bottom: 6px;
     }
     .subscribe-vk_wrap>div a,
     .subscribe-vk_wrap>div a:visited{
         margin: 0 auto;
+        display: inline-block;
     }
     .home-stocks-item{
         width: 100% !important;
@@ -1134,7 +1249,7 @@ footer .footer_wrap>div{
     display: block;
 }
 .teacher-item{
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 .teacher-head{
     padding: 20px 5% 20px;
@@ -1194,22 +1309,58 @@ footer .footer_wrap>div{
     display: block;
 }
 .teacher-about-filial-item{
-    margin-bottom: 20px;
+    margin-bottom: 55px;
+}
+.teacher-about-filial-head {
+    grid-template-columns: 120px auto;
+}
+.teacher-about-filial-head  span{
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    margin-top: 5px;
+}
+.teacher-head-group ul li{
+    font-size: 14px;
+    line-height: 16px;
+    
+}
+.course-suit.teacher {
+    padding-top: 40px !important;
+}
+.course-suit.teacher p {
+    margin-bottom: 25px !important;
 }
 .filial .course-test_wrap::after {
     background-image: url(./../img/test-illust_group2.svg);
     width: 100%;
     height: 199px;
     background-size: contain;
-    transform: translateY(0%);
+    transform: translateY(5%);
     margin-bottom: -5%;
 }
 .course-test.filial{
     padding: 50px 5% 0;
+    margin-bottom: 0px;
 }
 .home-feedback.teacher{
     background-color: #fff;
-    padding: 0px 5% 20px;
+    padding: 0px 5% 40px;
+}
+.filial-head-desc ul {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-row-gap: 20px;
+    margin-bottom: 30px;
+}
+.filial-head-desc a.button_green_full, .filial-head-desc a.button_green_full:visited {
+    width: 100%;
+}
+.course-suit {
+    padding: 0 5% 50px;
+}
+.pop_window a.close{
+    right: 5%;
 }
 
 }
