--- a/style/business.css
+++ b/style/business.css
@@ -322,4 +322,12 @@
     .feedback.business h2{
         margin-bottom: 0;
     }
+    .course-learn_wrap{
+        display: block;
+    }
+    .course-learn_wrap h2 {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 30px;
+    }
 }
