--- a/style/business.css
+++ b/style/business.css
@@ -329,5 +329,9 @@
         font-weight: bold;
         font-size: 24px;
         line-height: 30px;
+        position: relative !important;
+    }
+    .course-learn_wrap .airSticky_stop-block>div{
+        display: none !important;
     }
 }
