--- a/style/business.css
+++ b/style/business.css
@@ -330,6 +330,7 @@
         font-size: 24px;
         line-height: 30px;
         position: relative !important;
+        top: 0 !important;
     }
     .course-learn_wrap .airSticky_stop-block>div{
         display: none !important;
